Subindo tela de Login conectada na API

--- a/Site Institucional/.env.dev
+++ b/Site Institucional/.env.dev
@@ -4,7 +4,7 @@ AMBIENTE_PROCESSO=desenvolvimento
 DB_HOST=localhost
 DB_DATABASE='vaultwise'
 DB_USER='root'
-DB_PASSWORD='Mysql123.'
+DB_PASSWORD='150917@Milk'
 DB_PORT=3306
 
 # Configurações do servidor de aplicação
